@@ -16,7 +16,7 @@
     &ndash;
     %tt
       - if assigned.due_at_hint == "due_asap"
-        due as soon as possible.
+        due now.
       - elsif assigned.due_at_hint == "due_later"
         due sometime soon.
       - elsif assigned.due_at < Date.today
