@@ -1,10 +1,0 @@
-- content_for :javascript_epilogue do
-  :plain
-    function flip_calendar(value) {
-      if (value == "specific_time") {
-        $("task_due_at_hint").toggle(); // Hide dropdown.
-        $("task_calendar").toggle();    // Show editable date field.
-        $("task_calendar").focus();     // Focus to invoke calendar popup.
-      }
-    }
-    crm.date_select_popup("task_calendar", "task_due_at_hint");
