@@ -14,15 +14,15 @@
         %td{ :valign => :top }
           .label.req Due:
           - if @task.due_at_hint != "specific_time"
-            = f.select :due_at_hint, @due_at_hint, {}, { :style => "width:160px;", :onchange => "flip_calendar(this.value)" }
-            = f.text_field :calendar, :style => "width:110px; display:none;", :autocomplete => :off
+            = f.select :due_at_hint, @due_at_hint, {}, { :style => "width:160px;", :onchange => "crm.flip_calendar(this.value)" }
+            = f.text_field :calendar, :style => "width:160px; display:none;", :autocomplete => :off
           - else
-            = f.select :due_at_hint, @due_at_hint, {}, { :style => "width:160px; display:none;", :onchange => "flip_calendar(this.value)" }
-            = f.text_field :calendar, :style => "width:110px;", :autocomplete => :off
+            = f.select :due_at_hint, @due_at_hint, {}, { :style => "width:160px; display:none;", :onchange => "crm.flip_calendar(this.value)" }
+            = f.text_field :calendar, :style => "width:160px;", :autocomplete => :off
         %td= spacer
         %td{ :valign => :top }
           .label.req Assign to:
-          = collection_select :task, :assigned_to, @users, :id, :full_name, { :selected => @current_user.id }, { :style => "width:160px" }
+          = collection_select :task, :assigned_to, @users, :id, :full_name, { :include_blank => "Myself" }, { :style => "width:160px" }
         %td= spacer
         %td{ :valign => :top }
           .label.req Category:
@@ -31,3 +31,6 @@
     = f.submit "Create Task"
     or
     = link_to_remote "Cancel", { :url => new_task_path, :with => "{ visible: true, context: '#{@context}' }" }
+
+%script{:type => "text/javascript"}
+  crm.date_select_popup("task_calendar", "task_due_at_hint");
