@@ -6,6 +6,7 @@ then you win. –- Mahatma Gandhi
 
 Wed, Feb 25, 2008
 ---------------------------------------------------------------------
+- Refactored tasks, added ability to create related tasks (Campaigns only so far).
 
 Tue, Feb 24, 2008
 ---------------------------------------------------------------------
